@@ -5,13 +5,14 @@ import static org.mockito.Mockito.*;
 
 import br.com.utfpr.gerenciamento.server.dto.NadaConstaResponseDto;
 import br.com.utfpr.gerenciamento.server.enumeration.NadaConstaStatus;
+import br.com.utfpr.gerenciamento.server.event.nadaConsta.NadaConstaEmitidoEvent;
+import br.com.utfpr.gerenciamento.server.event.nadaConsta.NadaConstaPendenciasEvent;
 import br.com.utfpr.gerenciamento.server.model.Emprestimo;
 import br.com.utfpr.gerenciamento.server.model.EmprestimoItem;
 import br.com.utfpr.gerenciamento.server.model.Item;
 import br.com.utfpr.gerenciamento.server.model.NadaConsta;
 import br.com.utfpr.gerenciamento.server.model.Usuario;
 import br.com.utfpr.gerenciamento.server.repository.NadaConstaRepository;
-import br.com.utfpr.gerenciamento.server.service.EmailService;
 import br.com.utfpr.gerenciamento.server.service.EmprestimoService;
 import br.com.utfpr.gerenciamento.server.service.SystemConfigService;
 import br.com.utfpr.gerenciamento.server.service.UsuarioService;
@@ -19,12 +20,14 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import org.modelmapper.ModelMapper;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.test.context.ActiveProfiles;
 
 @SpringBootTest
@@ -33,27 +36,27 @@ class NadaConstaServiceImplTest {
   private NadaConstaRepository nadaConstaRepository;
   private UsuarioService usuarioService;
   private EmprestimoService emprestimoService;
-  private EmailService emailService;
   private SystemConfigService systemConfigService;
   private ModelMapper modelMapper;
   private NadaConstaServiceImpl service;
+  private ApplicationEventPublisher eventPublisher;
 
   @BeforeEach
   void setup() {
     nadaConstaRepository = Mockito.mock(NadaConstaRepository.class);
     usuarioService = Mockito.mock(UsuarioService.class);
     emprestimoService = Mockito.mock(EmprestimoService.class);
-    emailService = Mockito.mock(EmailService.class);
     systemConfigService = Mockito.mock(SystemConfigService.class);
     modelMapper = Mockito.mock(ModelMapper.class);
+    eventPublisher = Mockito.mock(ApplicationEventPublisher.class);
     service =
         new NadaConstaServiceImpl(
             nadaConstaRepository,
             usuarioService,
             modelMapper,
             emprestimoService,
-            emailService,
-            systemConfigService);
+            systemConfigService,
+            eventPublisher);
     // Corrige o modelMapper para retornar um DTO válido
     when(modelMapper.map(any(), eq(NadaConstaResponseDto.class)))
         .thenReturn(new NadaConstaResponseDto());
@@ -76,23 +79,22 @@ class NadaConstaServiceImplTest {
         NadaConsta.builder()
             .id(1L)
             .usuario(usuario)
-            .status(NadaConstaStatus.PENDING)
+            .status(NadaConstaStatus.COMPLETED) // Corrigido para COMPLETED
             .createdAt(LocalDateTime.now())
             .createdBy("Aluno Teste")
             .build();
     when(nadaConstaRepository.save(any())).thenReturn(nadaConsta);
-    doNothing()
-        .when(emailService)
-        .sendEmailWithTemplate(any(), anyString(), anyString(), anyString());
     when(usuarioService.save(any(Usuario.class))).thenReturn(usuario);
     NadaConstaResponseDto dto = service.solicitarNadaConsta("123456");
     assertNotNull(dto);
-    verify(emailService)
-        .sendEmailWithTemplate(
-            any(),
-            eq("destino@utfpr.edu.br"),
-            eq("Declaração Nada Consta"),
-            eq("nada-consta-declaracao.html"));
+    ArgumentCaptor<NadaConstaEmitidoEvent> captor =
+        ArgumentCaptor.forClass(NadaConstaEmitidoEvent.class);
+    verify(eventPublisher).publishEvent(captor.capture());
+    NadaConstaEmitidoEvent event = captor.getValue();
+    assertEquals("destino@utfpr.edu.br", event.getRecipient());
+    assertEquals("Declaração Nada Consta", event.getSubject());
+    assertEquals("nada-consta-declaracao.html", event.getTemplateName());
+    assertNotNull(event.getTemplateData());
     verify(usuarioService).save(any(Usuario.class));
   }
 
@@ -112,10 +114,9 @@ class NadaConstaServiceImplTest {
     EmprestimoItem emprestimoItem = new EmprestimoItem();
     emprestimoItem.setItem(item);
     Emprestimo emprestimo = new Emprestimo();
-    emprestimo.setEmprestimoItem(List.of(emprestimoItem));
+    emprestimo.setEmprestimoItem(Set.of(emprestimoItem));
     emprestimo.setDataEmprestimo(LocalDate.now());
     emprestimo.setPrazoDevolucao(LocalDate.now().plusDays(7));
-    // Corrige o mock para usar o username
     when(emprestimoService.findAllEmprestimosAbertosByUsuario(usuario.getUsername()))
         .thenReturn(List.of(emprestimo));
     when(nadaConstaRepository.save(any()))
@@ -127,29 +128,152 @@ class NadaConstaServiceImplTest {
                 .createdAt(LocalDateTime.now())
                 .createdBy("Aluno Teste")
                 .build());
-    doNothing()
-        .when(emailService)
-        .sendEmailWithTemplate(any(), anyString(), anyString(), anyString());
     NadaConstaResponseDto dto = service.solicitarNadaConsta("123456");
     assertNotNull(dto);
-    ArgumentCaptor<Map<String, Object>> captor = ArgumentCaptor.forClass(Map.class);
-    verify(emailService)
-        .sendEmailWithTemplate(
-            captor.capture(),
-            eq("aluno@utfpr.edu.br"),
-            eq("Pendências de Empréstimos"),
-            eq("pendencias-emprestimos.html"));
-    Object emprestimosObj = captor.getValue().get("emprestimos");
+    ArgumentCaptor<NadaConstaPendenciasEvent> captor =
+        ArgumentCaptor.forClass(NadaConstaPendenciasEvent.class);
+    verify(eventPublisher).publishEvent(captor.capture());
+    NadaConstaPendenciasEvent event = captor.getValue();
+    assertEquals("aluno@utfpr.edu.br", event.getRecipient());
+    assertEquals("Pendências de Empréstimos", event.getSubject());
+    assertEquals("pendencias-emprestimos.html", event.getTemplateName());
+    assertNotNull(event.getTemplateData());
+    Object emprestimosObj = event.getTemplateData().get("emprestimos");
     assertNotNull(emprestimosObj);
     @SuppressWarnings("unchecked")
     List<Map<String, Object>> itens = (List<Map<String, Object>>) emprestimosObj;
     assertEquals(1, itens.size());
-    assertEquals("Notebook", itens.get(0).get("itemNome"));
+    assertEquals("Notebook", itens.getFirst().get("itemNome"));
   }
 
   @Test
   void shouldThrowExceptionWhenUserNotFound() {
     when(usuarioService.findByDocumento("999999")).thenReturn(null);
     assertThrows(RuntimeException.class, () -> service.solicitarNadaConsta("999999"));
+  }
+
+  @Test
+  void shouldHandleNullEmprestimosList() {
+    Usuario usuario =
+        Usuario.builder().id(2L).documento("222222").email("user@utfpr.edu.br").ativo(true).build();
+    when(usuarioService.findByDocumento("222222")).thenReturn(usuario);
+    when(emprestimoService.findAllEmprestimosAbertosByUsuario(anyString())).thenReturn(null);
+    when(systemConfigService.getEmailNadaConsta()).thenReturn("destino@utfpr.edu.br");
+    NadaConsta nadaConsta =
+        NadaConsta.builder()
+            .id(2L)
+            .usuario(usuario)
+            .status(NadaConstaStatus.COMPLETED)
+            .createdAt(LocalDateTime.now())
+            .createdBy("user")
+            .build();
+    when(nadaConstaRepository.save(any())).thenReturn(nadaConsta);
+    when(usuarioService.save(any(Usuario.class))).thenReturn(usuario);
+    NadaConstaResponseDto dto = service.solicitarNadaConsta("222222");
+    assertNotNull(dto);
+    verify(eventPublisher).publishEvent(any(NadaConstaEmitidoEvent.class));
+    verify(usuarioService).save(any(Usuario.class));
+  }
+
+  @Test
+  void shouldHandleNullSystemConfigEmail() {
+    Usuario usuario =
+        Usuario.builder().id(3L).documento("333333").email("user@utfpr.edu.br").ativo(true).build();
+    when(usuarioService.findByDocumento("333333")).thenReturn(usuario);
+    when(emprestimoService.findAllEmprestimosAbertosByUsuario(anyString())).thenReturn(List.of());
+    when(systemConfigService.getEmailNadaConsta()).thenReturn(null);
+    NadaConsta nadaConsta =
+        NadaConsta.builder()
+            .id(3L)
+            .usuario(usuario)
+            .status(NadaConstaStatus.COMPLETED)
+            .createdAt(LocalDateTime.now())
+            .createdBy("user")
+            .build();
+    when(nadaConstaRepository.save(any())).thenReturn(nadaConsta);
+    when(usuarioService.save(any(Usuario.class))).thenReturn(usuario);
+    NadaConstaResponseDto dto = service.solicitarNadaConsta("333333");
+    assertNotNull(dto);
+    // Should NOT publish event if email is null/invalid
+    verify(eventPublisher, never()).publishEvent(any(NadaConstaEmitidoEvent.class));
+    verify(usuarioService).save(any(Usuario.class));
+  }
+
+  @Test
+  void shouldHandleModelMapperReturnsNull() {
+    Usuario usuario =
+        Usuario.builder().id(4L).documento("444444").email("user@utfpr.edu.br").ativo(true).build();
+    when(usuarioService.findByDocumento("444444")).thenReturn(usuario);
+    when(emprestimoService.findAllEmprestimosAbertosByUsuario(anyString())).thenReturn(List.of());
+    when(systemConfigService.getEmailNadaConsta()).thenReturn("destino@utfpr.edu.br");
+    NadaConsta nadaConsta =
+        NadaConsta.builder()
+            .id(4L)
+            .usuario(usuario)
+            .status(NadaConstaStatus.COMPLETED)
+            .createdAt(LocalDateTime.now())
+            .createdBy("user")
+            .build();
+    when(nadaConstaRepository.save(any())).thenReturn(nadaConsta);
+    when(usuarioService.save(any(Usuario.class))).thenReturn(usuario);
+    when(modelMapper.map(any(), eq(NadaConstaResponseDto.class))).thenReturn(null);
+    NadaConstaResponseDto dto = service.solicitarNadaConsta("444444");
+    assertNull(dto);
+    verify(eventPublisher).publishEvent(any(NadaConstaEmitidoEvent.class));
+    verify(usuarioService).save(any(Usuario.class));
+  }
+
+  @Test
+  void shouldThrowExceptionWhenRepositoryFails() {
+    Usuario usuario =
+        Usuario.builder().id(5L).documento("555555").email("user@utfpr.edu.br").ativo(true).build();
+    when(usuarioService.findByDocumento("555555")).thenReturn(usuario);
+    when(emprestimoService.findAllEmprestimosAbertosByUsuario(anyString())).thenReturn(List.of());
+    when(systemConfigService.getEmailNadaConsta()).thenReturn("destino@utfpr.edu.br");
+    when(nadaConstaRepository.save(any())).thenThrow(new RuntimeException("DB error"));
+    assertThrows(RuntimeException.class, () -> service.solicitarNadaConsta("555555"));
+  }
+
+  @Test
+  void shouldThrowExceptionWhenUsuarioServiceFails() {
+    Usuario usuario =
+        Usuario.builder().id(6L).documento("666666").email("user@utfpr.edu.br").ativo(true).build();
+    when(usuarioService.findByDocumento("666666")).thenReturn(usuario);
+    when(emprestimoService.findAllEmprestimosAbertosByUsuario(anyString())).thenReturn(List.of());
+    when(systemConfigService.getEmailNadaConsta()).thenReturn("destino@utfpr.edu.br");
+    NadaConsta nadaConsta =
+        NadaConsta.builder()
+            .id(6L)
+            .usuario(usuario)
+            .status(NadaConstaStatus.COMPLETED)
+            .createdAt(LocalDateTime.now())
+            .createdBy("user")
+            .build();
+    when(nadaConstaRepository.save(any())).thenReturn(nadaConsta);
+    when(usuarioService.save(any(Usuario.class)))
+        .thenThrow(new RuntimeException("User save error"));
+    assertThrows(RuntimeException.class, () -> service.solicitarNadaConsta("666666"));
+  }
+
+  @Test
+  void shouldHandleUserWithoutEmail() {
+    Usuario usuario = Usuario.builder().id(7L).documento("777777").email(null).ativo(true).build();
+    when(usuarioService.findByDocumento("777777")).thenReturn(usuario);
+    when(emprestimoService.findAllEmprestimosAbertosByUsuario(anyString())).thenReturn(List.of());
+    when(systemConfigService.getEmailNadaConsta()).thenReturn("destino@utfpr.edu.br");
+    NadaConsta nadaConsta =
+        NadaConsta.builder()
+            .id(7L)
+            .usuario(usuario)
+            .status(NadaConstaStatus.COMPLETED)
+            .createdAt(LocalDateTime.now())
+            .createdBy("user")
+            .build();
+    when(nadaConstaRepository.save(any())).thenReturn(nadaConsta);
+    when(usuarioService.save(any(Usuario.class))).thenReturn(usuario);
+    NadaConstaResponseDto dto = service.solicitarNadaConsta("777777");
+    assertNotNull(dto);
+    verify(eventPublisher).publishEvent(any(NadaConstaEmitidoEvent.class));
+    verify(usuarioService).save(any(Usuario.class));
   }
 }
